# regelverk-python

./: .env.example  .gitignore  CLAUDE.md  README_SETUP.md  pyproject.toml
.claude/commands/: README.md  analyze.md  domain.md  execute.md  plan.md  plan_application.md  plan_domain.md  plan_infrastructure.md  plan_presentation.md
.claude/skills/: README.md
.claude/skills/domain-driven-design/: SKILL.md
.claude/skills/test-driven-development/: SKILL.md
documentation/: CLEAN-ARCHITECTURE-WORKFLOW.md  domain-glossary.md  learning-log.md
documentation/architecture/: chosen-structure.md  project-structure.md  tech-stack.md
documentation/domain-knowledge/: aggregate-root-education.md
documentation/plans/: 001-repository-setup.md  002-education-entity-implementation.md
src/domain/: README.md  exceptions.py  ports.py
src/domain/aggregates/education/: __init__.py
src/domain/factories/: README.md  __init__.py
src/domain/policies/: __init__.py
src/domain/shared/: __init__.py
src/domain/specifications/: __init__.py
src/infrastructure/config/: settings.py
src/infrastructure/persistence/: __init__.py  base.py  database.py
src/presentation/api/: dependencies.py  main.py
src/presentation/api/routes/: admission_routes.py  quota_routes.py  student_routes.py
tests/: conftest.py
tests/e2e/api/: test_health.py
tests/features/education/: manage-education.feature
